[gd_scene load_steps=2 format=3 uid="uid://b5k8j7nan2p4q"]

[ext_resource type="Script" path="res://scripts/controllers/OutputWindowController.gd" id="1"]

[node name="OutputWindow" type="Window"]
title = "Lymo - Output"
initial_position = 2
size = Vector2i(1920, 1080)
unresizable = false
borderless = false
always_on_top = false
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.97, 1, 1)

[node name="OutputCanvas" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -12.0
offset_right = 100.0
offset_bottom = 12.0
text = "Lymo Output - Ready"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]